<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:clipToPadding="false"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_profile"
                app:tint="@color/text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/profil_pengguna"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_gradient"
                android:backgroundTint="#DBEAFE"
                android:padding="16dp"
                android:src="@drawable/ic_profile"
                app:tint="@color/primary_blue" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Muhammad Taufik"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Mahasiswa Aktif | NPM: 2332043"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Status: "
                        android:textSize="12sp"
                        android:textColor="@color/text_secondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terdaftar"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/green" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_car"
                    app:tint="@color/text_primary" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_kendaraan"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plat_nomor"
                android:textSize="14sp"
                android:textColor="@color/text_secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#FAFAFA"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="B 1234 AB"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:textColor="@color/text_primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aktif"
                    android:textSize="12sp"
                    android:textColor="@color/green"
                    android:background="@drawable/bg_card"
                    android:backgroundTint="#DCFCE7"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tipe_kendaraan"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobil"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/model"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Honda Jazz"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btnUpdateVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_data_kendaraan"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:padding="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aksi_cepat"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="12dp" />

            <TextView
                android:id="@+id/btnHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riwayat_parkir"
                android:textSize="14sp"
                android:textColor="@color/text_primary"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E7EB" />

            <TextView
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan_aplikasi"
                android:textSize="14sp"
                android:textColor="@color/text_primary"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E7EB" />

            <TextView
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluar_akun"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:padding="12dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>